<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Game.AnswerLv2Activity">

    <ImageView
        android:id="@+id/user_image6"
        android:layout_width="93dp"
        android:layout_height="70dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/user_image5"
        android:layout_width="91dp"
        android:layout_height="65dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_image6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/user_image4"
        app:layout_constraintTop_toBottomOf="@+id/user_image2"
        app:layout_constraintVertical_bias="0.103" />

    <ImageView
        android:id="@+id/user_image4"
        android:layout_width="102dp"
        android:layout_height="74dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/img11"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="69dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image3"
        app:layout_constraintBottom_toTopOf="@+id/optionText"
        app:layout_constraintStart_toEndOf="@+id/img10"
        app:layout_constraintTop_toBottomOf="@+id/img8"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/img12"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="69dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image3"
        app:layout_constraintBottom_toTopOf="@+id/optionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img11"
        app:layout_constraintTop_toBottomOf="@+id/img13"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/img13"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2" />

    <ImageButton
        android:id="@+id/img"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="69dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image3"
        app:layout_constraintBottom_toTopOf="@+id/optionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/sound"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:background="#0000"
        android:scaleType="fitXY"
        android:src="@drawable/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Chronometer
        android:id="@+id/timing"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Chronometer>

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/done"
        android:background="@drawable/border"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <ImageButton
        android:id="@+id/img8"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image3"
        app:layout_constraintEnd_toStartOf="@+id/img13"
        app:layout_constraintTop_toBottomOf="@+id/img9" />

    <ImageButton
        android:id="@+id/img10"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="71dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image3"
        app:layout_constraintBottom_toTopOf="@+id/optionText"
        app:layout_constraintStart_toEndOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/user_image1"
        android:layout_width="97dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <ImageView
        android:id="@+id/user_image2"
        android:layout_width="94dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <ImageView
        android:id="@+id/user_image3"
        android:layout_width="88dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <TextView
        android:id="@+id/optionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/yours_selections"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/img1"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image3"
        app:layout_constraintStart_toEndOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/img5" />

    <ImageButton
        android:id="@+id/img2"
        android:layout_width="88dp"
        android:layout_height="95dp"
        android:layout_centerInParent="true"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <ImageButton
        android:id="@+id/img3"
        android:layout_width="84dp"
        android:layout_height="86dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img6"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/img9"
        android:layout_width="99dp"
        android:layout_height="91dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/img5"
        android:layout_width="96dp"
        android:layout_height="95dp"
        android:layout_centerInParent="true"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <ImageButton
        android:id="@+id/img6"
        android:layout_width="94dp"
        android:layout_height="91dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/image10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border"
        android:text="CLEAR"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>